tests/fixtures/pass/strict-in-src/.chous
allow **/*.ts
strict in src
