tests/fixtures/fail/strict-files-violation/.chous
allow **/*.ts
strict files in src
